[tool.poetry]
name = "grimoirelab-release-tools"
version = "0.1.0"
description = "Set of tools to generate GrimoireLab releases."
authors = [
    "Santiago Dueñas <sduenas@bitergia.com>"
]
license = "GPL-3.0-or-later"

readme = "README.md"

packages = [
    { include = "release_tools"},
    { include = "tests", format = "sdist" },
]

include = [
    "AUTHORS",
    "README.md",
    "LICENSE",
    "NEWS"
]

classifiers = [
   "Development Status :: 4 - Beta",
   "Intended Audience :: Developers",
   "Topic :: Software Development :: Build Tools",
]

keywords = [
    "development",
    "grimoirelab",
]

[tool.poetry.scripts]
changelog = 'release_tools.changelog:changelog'
semverup = 'release_tools.semverup:semverup'
notes = 'release_tools.notes:notes'
publish = 'release_tools.publish:publish'

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"
PyYAML = "^5.1.2"
semver = "^2.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
