[tool.poetry]
name = "release-tools"
version = "0.6.0-rc.1"
description = "Set of tools to generate Python releases."
authors = [
    "Santiago Dueñas <sduenas@bitergia.com>"
]
license = "GPL-3.0-or-later"

readme = "README.md"

packages = [
    { include = "release_tools"},
    { include = "tests", format = "sdist" },
]

include = [
    { path = "AUTHORS", format = "sdist" },
    { path = "NEWS", format = "sdist" },
    { path = "README.md", format = "sdist" },
]

classifiers = [
   "Development Status :: 4 - Beta",
   "Intended Audience :: Developers",
   "Topic :: Software Development :: Build Tools",
]

keywords = [
    "development",
    "build",
]

[tool.poetry.scripts]
changelog = 'release_tools.changelog:changelog'
semverup = 'release_tools.semverup:semverup'
notes = 'release_tools.notes:notes'
publish = 'release_tools.publish:publish'

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.0"
PyYAML = "^6.0.1"
semver = "^2.9"
tomlkit = "^0.5.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
